catkin_ws/logs/frontend/build.make.021.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/main.cpp: In function ‘int main(int, char**)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/main.cpp:243:9: error: request for member ‘tic’ in ‘time’, which is of non-class type ‘time_t(time_t*)throw () {aka long int(long int*)throw ()}’
    time.tic();
         ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/main.cpp:283:41: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
    if (slam.getImuCompensateCounter()== badFrameCnt)
                                         ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/main.cpp:311:44: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i = 0; i<slam.getNodes().size();i++)
                                            ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/main.cpp:326:20: error: request for member ‘toc’ in ‘time’, which is of non-class type ‘time_t(time_t*)throw () {aka long int(long int*)throw ()}’
    timeDiff = time.toc() - time.tic(); 
                    ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/main.cpp:326:33: error: request for member ‘tic’ in ‘time’, which is of non-class type ‘time_t(time_t*)throw () {aka long int(long int*)throw ()}’
    timeDiff = time.toc() - time.tic(); 
                                 ^
make[2]: *** [CMakeFiles/frontend.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
